# mcp-test

./: .gitignore  client-http.py  client-sse.py  client.py  main.py  pyproject.toml  server.py  temp.py  test.ipynb
data/: Height_vs_Weight_Scatter_Data.csv  Monthly_Sales_Data.csv  Weekly_Multi-Series_Data.csv
